Fixed header overflow

--- a/styles/post.module.css
+++ b/styles/post.module.css
@@ -95,15 +95,13 @@
 }
 
 .user {
+    @apply 
+    flex-row
+    max-md:text-xs max-md:flex-col;
     width: 100%;
     display: flex;
-    flex-direction: row;
     align-items: flex-start;
     gap: 3px;
-}
-
-.user {
-
 }
 
 .title {
